--- a/launcelot/TestLauncelot.conf
+++ b/launcelot/TestLauncelot.conf
@@ -12,8 +12,8 @@ sleep_time_max = 0
 
 [bench]
 log_to = file
-log_path = twisted_server.log
-result_path = twisted_server_result.xml
+log_path = testlauncelot.log
+result_path = pystdlib_server_result.xml
 cycles = 1:2:3:5:7:10:13:16:20:30:50:80
 duration = 18
 startup_delay = 0.1
